--- a/app/src/main/res/layout/fragment_add_workout2user.xml
+++ b/app/src/main/res/layout/fragment_add_workout2user.xml
@@ -24,7 +24,7 @@
                 android:layout_marginLeft="35dp"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:background="@color/scifitRed"
+                android:background="@color/scifitBlue"
                 app:tabGravity="center"
                 app:tabIndicatorColor="@color/md_white_1000"
                 app:tabTextColor="@color/scifitBlue"
