--- a/app/src/main/res/layout/fragment_diet_fragment_admin.xml
+++ b/app/src/main/res/layout/fragment_diet_fragment_admin.xml
@@ -13,7 +13,7 @@
         android:layout_marginLeft="35dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@color/scifitRed"
+        android:background="@color/scifitBlue"
         app:tabGravity="center"
         app:tabIndicatorColor="@color/md_white_1000"
         app:tabTextColor="@color/scifitBlue"
