--- a/app/src/main/res/layout/fragment_home2.xml
+++ b/app/src/main/res/layout/fragment_home2.xml
@@ -14,7 +14,7 @@
         android:id="@+id/tablayout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@color/scifitRed"
+        android:background="@color/scifitBlue"
         app:tabGravity="fill"
         app:tabIndicatorColor="@color/md_white_1000"
         app:tabTextColor="@color/scifitBlue"
