--- a/app/src/main/res/layout-hdpi/card_view_mu_name.xml
+++ b/app/src/main/res/layout-hdpi/card_view_mu_name.xml
@@ -10,7 +10,7 @@
     >
 
 <android.support.v7.widget.CardView
-    android:id="@+id/cardview_id"
+    android:id="@+id/cv_Mu"
     android:clickable="true"
     android:layout_width="130dp"
     android:layout_height="190dp"
