--- a/app/src/main/res/layout/fragment_add_workout2user.xml
+++ b/app/src/main/res/layout/fragment_add_workout2user.xml
@@ -27,7 +27,8 @@
                 android:background="@color/scifitBlue"
                 app:tabGravity="center"
                 app:tabIndicatorColor="@color/md_white_1000"
-                app:tabTextColor="@color/scifitBlue"
+                app:tabTextColor="@color/md_white_1000"
+                app:tabSelectedTextColor="@color/md_white_1000"
                 app:tabMode="scrollable" />
 
             <android.support.design.widget.TabLayout
