--- a/app/src/main/res/layout/fragment_track_progress_fragment_user.xml
+++ b/app/src/main/res/layout/fragment_track_progress_fragment_user.xml
@@ -210,6 +210,7 @@
             android:layout_width="match_parent"
             android:layout_marginHorizontal="23dp"
             android:layout_below="@id/btnUpdateWeight"
+            android:visibility="gone"
             android:layout_height="400dp">
 
             <android.support.v7.widget.RecyclerView
