--- a/app/src/main/res/layout/sets_show_history.xml
+++ b/app/src/main/res/layout/sets_show_history.xml
@@ -26,10 +26,6 @@
                 android:layout_width="45dp"
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="4dp"
-                android:layout_marginEnd="30dp"
-                android:layout_marginLeft="25dp"
-                android:layout_marginRight="30dp"
-                android:layout_marginStart="25dp"
                 android:layout_marginTop="4dp"
                 android:ems="10"
                 android:fontFamily="@font/cairo_semibold"
@@ -65,17 +61,13 @@
             <TextView
                 android:id="@+id/textViewVolume"
                 android:layout_width="69dp"
-                android:gravity="center"
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="4dp"
-                android:layout_marginEnd="10dp"
-                android:layout_marginLeft="10dp"
-                android:layout_marginRight="10dp"
-                android:layout_marginStart="10dp"
                 android:layout_marginTop="4dp"
                 android:layout_marginVertical="4dp"
                 android:background="@drawable/custom_table_text"
                 android:ems="10"
+                android:gravity="center"
                 android:inputType="number"
                 android:textSize="18dp"
                 app:layout_constraintBottom_toBottomOf="parent"
@@ -90,8 +82,8 @@
                 android:layout_width="62dp"
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="4dp"
-                android:layout_marginEnd="17dp"
-                android:layout_marginRight="17dp"
+                android:layout_marginEnd="8dp"
+                android:layout_marginRight="8dp"
                 android:layout_marginTop="4dp"
                 android:layout_marginVertical="4dp"
                 android:background="@drawable/custom_table_text"
@@ -111,8 +103,8 @@
                 android:layout_width="62dp"
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="4dp"
-                android:layout_marginEnd="17dp"
-                android:layout_marginRight="17dp"
+                android:layout_marginEnd="8dp"
+                android:layout_marginRight="8dp"
                 android:layout_marginTop="4dp"
                 android:layout_marginVertical="4dp"
                 android:background="@drawable/custom_table_text"
@@ -121,7 +113,7 @@
                 android:inputType="number"
                 android:textSize="18dp"
                 app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toStartOf="@+id/txtRM1"
+                app:layout_constraintEnd_toEndOf="@+id/txtSet"
                 app:layout_constraintStart_toEndOf="@+id/textViewVolume"
                 app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintVertical_bias="0.428" />
