--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -40,37 +40,30 @@
 
           <com.facebook.login.widget.LoginButton
               android:id="@+id/facebook_button"
-              android:layout_width="wrap_content"
+              android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:layout_gravity="center_horizontal"
               android:layout_marginBottom="8dp"
-              android:layout_marginEnd="8dp"
-              android:layout_marginLeft="8dp"
-              android:layout_marginRight="8dp"
-              android:layout_marginStart="8dp"
+              android:layout_marginHorizontal="35dp"
               android:layout_marginTop="8dp"
-              app:layout_constraintBottom_toTopOf="@+id/imageView3"
-              app:layout_constraintEnd_toEndOf="parent"
-              app:layout_constraintStart_toStartOf="parent"
-              app:layout_constraintTop_toTopOf="parent"
-              app:layout_constraintVertical_bias="1.0" />
-
-          <com.google.android.gms.common.SignInButton
-              android:id="@+id/google_button"
-              android:layout_width="wrap_content"
-              android:layout_height="wrap_content"
-              android:layout_marginBottom="8dp"
-              android:layout_marginEnd="8dp"
-              android:layout_marginLeft="8dp"
-              android:layout_marginRight="8dp"
-              android:layout_marginStart="8dp"
-              android:layout_marginTop="16dp"
-              app:layout_constraintBottom_toTopOf="@+id/emailTxt"
+              app:layout_constraintBottom_toTopOf="@+id/signupTxt"
               app:layout_constraintEnd_toEndOf="parent"
               app:layout_constraintHorizontal_bias="0.501"
               app:layout_constraintStart_toStartOf="parent"
-              app:layout_constraintTop_toTopOf="parent"
-              app:layout_constraintVertical_bias="0.137" />
+              app:layout_constraintTop_toBottomOf="@id/google_button" />
+
+          <com.google.android.gms.common.SignInButton
+              android:id="@+id/google_button"
+              android:layout_width="match_parent"
+              android:layout_height="wrap_content"
+              android:layout_marginBottom="4dp"
+              android:layout_marginHorizontal="30dp"
+              android:layout_marginTop="4dp"
+              app:layout_constraintBottom_toTopOf="@+id/facebook_button"
+              app:layout_constraintEnd_toEndOf="parent"
+              app:layout_constraintHorizontal_bias="0.501"
+              app:layout_constraintStart_toStartOf="parent"
+              app:layout_constraintTop_toBottomOf="@id/signinBtn" />
 
           <TextView
               android:id="@+id/signupTxt"
@@ -87,6 +80,7 @@
               android:textAlignment="center"
               android:textColor="#626262"
               android:textSize="16sp"
+              app:layout_constraintTop_toBottomOf="@id/facebook_button"
               app:layout_constraintBottom_toBottomOf="parent"
               app:layout_constraintEnd_toEndOf="parent"
               app:layout_constraintStart_toStartOf="parent" />
@@ -95,19 +89,18 @@
               android:id="@+id/signinBtn"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
-              android:layout_marginRight="30dp"
-              android:layout_marginLeft="30dp"
               android:layout_marginBottom="8dp"
-              android:layout_marginTop="16dp"
+              android:layout_marginLeft="30dp"
+              android:layout_marginRight="30dp"
+              android:layout_marginTop="4dp"
               android:backgroundTint="#cf0545"
               android:gravity="center"
               android:text="تسجيل الدخول"
               android:textColor="#ffff"
-              app:layout_constraintBottom_toBottomOf="@+id/divider2"
+              app:layout_constraintBottom_toTopOf="@+id/google_button"
               app:layout_constraintLeft_toLeftOf="parent"
               app:layout_constraintRight_toRightOf="parent"
-              app:layout_constraintTop_toBottomOf="@+id/txtForget"
-              app:layout_constraintVertical_bias="0.0" />
+              app:layout_constraintTop_toBottomOf="@+id/txtForget" />
 
 
           <EditText
