--- a/app/src/main/res/layout/activity_update_profile.xml
+++ b/app/src/main/res/layout/activity_update_profile.xml
@@ -131,10 +131,8 @@
             android:id="@+id/heightTxt2"
             android:layout_width="100dp"
             android:layout_height="45dp"
-            android:layout_marginEnd="8dp"
-            android:layout_marginLeft="8dp"
-            android:layout_marginRight="8dp"
-            android:layout_marginStart="8dp"
+            android:layout_marginLeft="4dp"
+            android:layout_marginRight="4dp"
             android:layout_marginTop="300dp"
             android:background="@drawable/custom_edit_text"
             android:drawablePadding="10dp"
@@ -148,8 +146,8 @@
             android:paddingRight="10dp"
             android:paddingTop="8.5dp"
             android:textSize="16dp"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintLeft_toRightOf="@+id/weightTxt2"
+            app:layout_constraintRight_toLeftOf="@+id/ageTxt2"
             app:layout_constraintTop_toBottomOf="@+id/actionBar" />
 
 
@@ -181,10 +179,8 @@
             android:id="@+id/weightTxt2"
             android:layout_width="100dp"
             android:layout_height="45dp"
-            android:layout_marginEnd="17dp"
-            android:layout_marginLeft="8dp"
-            android:layout_marginRight="17dp"
-            android:layout_marginStart="8dp"
+            android:layout_marginLeft="28dp"
+            android:layout_marginStart="28dp"
             android:layout_marginTop="300dp"
             android:background="@drawable/custom_edit_text"
             android:drawablePadding="10dp"
@@ -198,8 +194,7 @@
             android:paddingRight="10dp"
             android:paddingTop="8.5dp"
             android:textSize="16dp"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.956"
+            app:layout_constraintRight_toLeftOf="@+id/heightTxt2"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/actionBar" />
 
@@ -207,7 +202,8 @@
             android:id="@+id/ageTxt2"
             android:layout_width="100dp"
             android:layout_height="45dp"
-            android:layout_marginLeft="28dp"
+            android:layout_marginEnd="28dp"
+            android:layout_marginRight="28dp"
             android:layout_marginTop="300dp"
             android:background="@drawable/custom_edit_text"
             android:drawablePadding="10dp"
@@ -221,7 +217,8 @@
             android:paddingRight="10dp"
             android:paddingTop="8.5dp"
             android:textSize="16dp"
-            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintLeft_toRightOf="@+id/heightTxt2"
             app:layout_constraintTop_toBottomOf="@+id/actionBar" />
 
         <ImageView
