--- a/app/src/main/res/layout/activity_user_details.xml
+++ b/app/src/main/res/layout/activity_user_details.xml
@@ -99,10 +99,10 @@
             android:id="@+id/relaSpinner1"
             android:layout_width="match_parent"
             android:layout_height="48dp"
-            android:layout_marginEnd="25dp"
-            android:layout_marginLeft="25dp"
-            android:layout_marginRight="25dp"
-            android:layout_marginStart="25dp"
+            android:layout_marginEnd="30dp"
+            android:layout_marginLeft="30dp"
+            android:layout_marginRight="30dp"
+            android:layout_marginStart="30dp"
             android:layout_marginTop="12dp"
             android:background="@drawable/custom_spinner"
             app:layout_constraintEnd_toEndOf="parent"
@@ -125,10 +125,10 @@
             android:id="@+id/relaSpinner2"
             android:layout_width="match_parent"
             android:layout_height="48dp"
-            android:layout_marginEnd="25dp"
-            android:layout_marginLeft="25dp"
-            android:layout_marginRight="25dp"
-            android:layout_marginStart="25dp"
+            android:layout_marginEnd="30dp"
+            android:layout_marginLeft="30dp"
+            android:layout_marginRight="30dp"
+            android:layout_marginStart="30dp"
             android:layout_marginTop="12dp"
             android:background="@drawable/custom_spinner"
             app:layout_constraintEnd_toEndOf="parent"
@@ -151,10 +151,8 @@
             android:id="@+id/heightTxt"
             android:layout_width="100dp"
             android:layout_height="45dp"
-            android:layout_marginEnd="8dp"
-            android:layout_marginLeft="8dp"
-            android:layout_marginRight="8dp"
-            android:layout_marginStart="8dp"
+            android:layout_marginLeft="4dp"
+            android:layout_marginRight="4dp"
             android:layout_marginTop="300dp"
             android:background="@drawable/custom_edit_text"
             android:drawablePadding="10dp"
@@ -168,8 +166,8 @@
             android:paddingRight="10dp"
             android:paddingTop="8.5dp"
             android:textSize="16dp"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintLeft_toRightOf="@+id/weightTxt"
+            app:layout_constraintRight_toLeftOf="@+id/ageTxt"
             app:layout_constraintTop_toBottomOf="@+id/actionBar" />
 
 
@@ -201,10 +199,8 @@
             android:id="@+id/weightTxt"
             android:layout_width="100dp"
             android:layout_height="45dp"
-            android:layout_marginEnd="17dp"
-            android:layout_marginLeft="8dp"
-            android:layout_marginRight="17dp"
-            android:layout_marginStart="8dp"
+            android:layout_marginLeft="28dp"
+            android:layout_marginStart="28dp"
             android:layout_marginTop="300dp"
             android:background="@drawable/custom_edit_text"
             android:drawablePadding="10dp"
@@ -218,8 +214,7 @@
             android:paddingRight="10dp"
             android:paddingTop="8.5dp"
             android:textSize="16dp"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.956"
+            app:layout_constraintRight_toLeftOf="@+id/heightTxt"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/actionBar" />
 
@@ -227,7 +222,8 @@
             android:id="@+id/ageTxt"
             android:layout_width="100dp"
             android:layout_height="45dp"
-            android:layout_marginLeft="28dp"
+            android:layout_marginEnd="28dp"
+            android:layout_marginRight="28dp"
             android:layout_marginTop="300dp"
             android:background="@drawable/custom_edit_text"
             android:drawablePadding="10dp"
@@ -241,7 +237,8 @@
             android:paddingRight="10dp"
             android:paddingTop="8.5dp"
             android:textSize="16dp"
-            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintLeft_toRightOf="@+id/heightTxt"
             app:layout_constraintTop_toBottomOf="@+id/actionBar" />
 
         <TextView
