--- a/app/src/main/res/layout/fragment_add_meals.xml
+++ b/app/src/main/res/layout/fragment_add_meals.xml
@@ -13,10 +13,11 @@
         android:layout_marginLeft="35dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@color/scifitRed"
+        android:background="@color/scifitBlue"
         app:tabGravity="center"
         app:tabIndicatorColor="@color/md_white_1000"
-        app:tabTextColor="@color/scifitBlue"
+        app:tabTextColor="@color/md_white_1000"
+        app:tabSelectedTextColor="@color/md_white_1000"
         app:tabMode="scrollable" />
 
     <android.support.design.widget.TabLayout
