--- a/app/src/main/res/layout/fragment_exercises.xml
+++ b/app/src/main/res/layout/fragment_exercises.xml
@@ -14,9 +14,11 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="@color/scifitBlue"
-        app:tabGravity="fill"
+        app:tabGravity="center"
+        app:tabMode="fixed"
+        app:tabSelectedTextColor="@color/md_white_1000"
         app:tabIndicatorColor="@color/md_white_1000"
-        app:tabTextColor="@color/scifitBlue"
+        app:tabTextColor="@color/md_white_1000"
         />
 
     <android.support.design.widget.TabLayout
