--- a/app/src/main/res/layout/fragment_home2.xml
+++ b/app/src/main/res/layout/fragment_home2.xml
@@ -16,8 +16,10 @@
         android:layout_height="wrap_content"
         android:background="@color/scifitBlue"
         app:tabGravity="fill"
+        app:tabMode="fixed"
+        app:tabSelectedTextColor="@color/md_white_1000"
         app:tabIndicatorColor="@color/md_white_1000"
-        app:tabTextColor="@color/scifitBlue"
+        app:tabTextColor="@color/md_white_1000"
          />
 
     <android.support.design.widget.TabLayout
@@ -25,7 +27,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@+id/tablayout"
-        android:background="@color/md_light_green_100"
+        android:background="@color/md_white_1000"
         app:tabGravity="fill"
         app:tabMode="fixed"
         app:tabIndicatorColor="@color/blackGrey"
