--- a/app/src/main/res/menu/admin_nav.xml
+++ b/app/src/main/res/menu/admin_nav.xml
@@ -19,7 +19,7 @@
 
     <item
         android:id="@+id/support"
-        android:icon="@drawable/toolbar_support"
+        android:icon="@drawable/ic_chat"
         android:title="الدعم"/>
 
 
