--- a/app/src/main/res/menu/menu_nav.xml
+++ b/app/src/main/res/menu/menu_nav.xml
@@ -28,7 +28,7 @@
 
     <item
         android:id="@+id/language"
-        android:icon="@drawable/toolbar_support"
+        android:icon="@drawable/ic_chat"
         android:title=""/>
 
 
