--- a/app/src/main/res/layout/activity_inside_exercise.xml
+++ b/app/src/main/res/layout/activity_inside_exercise.xml
@@ -162,7 +162,7 @@
                 app:layout_constraintTop_toBottomOf="@+id/cardView2" />
 
             <android.support.constraint.ConstraintLayout
-                android:id="@+id/relativeLayout4free"
+                android:id="@+id/relativeLayout4"
                 android:layout_width="match_parent"
                 android:layout_height="45dp"
                 android:layout_marginEnd="25dp"
@@ -174,7 +174,7 @@
                 app:layout_constraintTop_toBottomOf="@+id/textViewExNameUser">
 
                 <TextView
-                    android:id="@+id/txtSetsShowFree"
+                    android:id="@+id/txtSetsShow"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginBottom="4dp"
@@ -192,7 +192,7 @@
                     app:layout_constraintTop_toTopOf="parent" />
 
                 <TextView
-                    android:id="@+id/tvTotalVolumeFree"
+                    android:id="@+id/tvTotalVolume"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
 
@@ -201,105 +201,6 @@
                     android:layout_marginLeft="4dp"
                     android:layout_marginRight="16dp"
                     android:layout_marginStart="4dp"
-                    android:layout_marginTop="4dp"
-                    android:text="Volume"
-                    android:textColor="@color/md_white_1000"
-                    app:layout_constraintBottom_toBottomOf="parent"
-                    app:layout_constraintEnd_toStartOf="@+id/txtMaxRm1Free"
-                    app:layout_constraintHorizontal_bias="1.0"
-                    app:layout_constraintLeft_toLeftOf="parent"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toTopOf="parent" />
-
-                <TextView
-                    android:id="@+id/txtMaxRm1Free"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginBottom="4dp"
-                    android:layout_marginRight="8dp"
-                    android:layout_marginTop="4dp"
-                    android:text="1RM"
-                    android:textColor="@color/md_white_1000"
-                    app:layout_constraintBottom_toBottomOf="parent"
-                    app:layout_constraintLeft_toRightOf="@+id/tvTotalVolumeFree"
-                    app:layout_constraintRight_toLeftOf="@+id/txtRepsShow3Free"
-                    app:layout_constraintTop_toTopOf="parent" />
-
-                <TextView
-                    android:id="@+id/txtRepsShow3Free"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginBottom="4dp"
-                    android:layout_marginEnd="8dp"
-                    android:layout_marginLeft="16dp"
-                    android:layout_marginRight="8dp"
-                    android:layout_marginStart="16dp"
-                    android:layout_marginTop="4dp"
-                    android:text="الوزن"
-                    android:textColor="@color/md_white_1000"
-                    app:layout_constraintBottom_toBottomOf="parent"
-                    app:layout_constraintEnd_toStartOf="@+id/txtRepsShow2"
-                    app:layout_constraintStart_toEndOf="@+id/txtMaxRm1Free"
-                    app:layout_constraintTop_toTopOf="parent"
-                    app:layout_constraintVertical_bias="0.428" />
-
-                <TextView
-                    android:id="@+id/txtRepsShow2"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-
-                    android:layout_marginBottom="4dp"
-                    android:layout_marginEnd="4dp"
-                    android:layout_marginRight="4dp"
-                    android:layout_marginTop="4dp"
-                    android:text="التكرار"
-                    android:textColor="@color/md_white_1000"
-                    app:layout_constraintBottom_toBottomOf="parent"
-                    app:layout_constraintEnd_toStartOf="@+id/txtSetsShowFree"
-                    app:layout_constraintStart_toEndOf="@+id/txtRepsShow3Free"
-                    app:layout_constraintTop_toTopOf="parent" />
-            </android.support.constraint.ConstraintLayout>
-
-            <android.support.constraint.ConstraintLayout
-                android:id="@+id/relativeLayout4"
-                android:layout_width="match_parent"
-                android:layout_height="45dp"
-                android:layout_alignParentTop="true"
-                android:layout_centerHorizontal="true"
-                android:layout_marginEnd="25dp"
-                android:layout_marginHorizontal="25dp"
-                android:layout_marginLeft="25dp"
-                android:layout_marginRight="25dp"
-                android:layout_marginStart="25dp"
-                android:background="@drawable/table_background"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/textViewExNameUser">
-
-                <TextView
-                    android:id="@+id/txtSetsShow"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginBottom="4dp"
-                    android:layout_marginTop="4dp"
-                    android:text="الجلسات"
-                    android:textColor="@color/md_white_1000"
-                    app:layout_constraintBottom_toBottomOf="parent"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintStart_toEndOf="@+id/txtRepsShow2"
-                    app:layout_constraintTop_toTopOf="parent"
-                    app:layout_constraintVertical_bias="0.428" />
-
-                <TextView
-                    android:id="@+id/tvTotalVolume"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-
-                    android:layout_marginBottom="4dp"
-                    android:layout_marginEnd="4dp"
-                    android:layout_marginLeft="42dp"
-                    android:layout_marginRight="4dp"
-                    android:layout_marginStart="42dp"
                     android:layout_marginTop="4dp"
                     android:text="Volume"
                     android:textColor="@color/md_white_1000"
@@ -315,6 +216,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginBottom="4dp"
+                    android:layout_marginRight="8dp"
                     android:layout_marginTop="4dp"
                     android:text="1RM"
                     android:textColor="@color/md_white_1000"
@@ -328,19 +230,117 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginBottom="4dp"
+                    android:layout_marginEnd="8dp"
+                    android:layout_marginLeft="16dp"
+                    android:layout_marginRight="8dp"
+                    android:layout_marginStart="16dp"
+                    android:layout_marginTop="4dp"
+                    android:text="الوزن"
+                    android:textColor="@color/md_white_1000"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintEnd_toStartOf="@+id/txtRepsShow2"
+                    app:layout_constraintStart_toEndOf="@+id/txtMaxRm1"
+                    app:layout_constraintTop_toTopOf="parent"
+                    app:layout_constraintVertical_bias="0.428" />
+
+                <TextView
+                    android:id="@+id/txtRepsShow2"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+
+                    android:layout_marginBottom="4dp"
+                    android:layout_marginEnd="4dp"
+                    android:layout_marginRight="4dp"
+                    android:layout_marginTop="4dp"
+                    android:text="التكرار"
+                    android:textColor="@color/md_white_1000"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintEnd_toStartOf="@+id/txtSetsShow"
+                    app:layout_constraintStart_toEndOf="@+id/txtRepsShow3"
+                    app:layout_constraintTop_toTopOf="parent" />
+            </android.support.constraint.ConstraintLayout>
+
+            <android.support.constraint.ConstraintLayout
+                android:id="@+id/relativeLayout4Free"
+                android:layout_width="match_parent"
+                android:layout_height="45dp"
+                android:layout_alignParentTop="true"
+                android:layout_centerHorizontal="true"
+                android:layout_marginEnd="25dp"
+                android:layout_marginHorizontal="25dp"
+                android:layout_marginLeft="25dp"
+                android:layout_marginRight="25dp"
+                android:layout_marginStart="25dp"
+                android:background="@drawable/table_background"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/textViewExNameUser">
+
+                <TextView
+                    android:id="@+id/txtSetsShowFree"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginBottom="4dp"
+                    android:layout_marginTop="4dp"
+                    android:text="الجلسات"
+                    android:textColor="@color/md_white_1000"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toEndOf="@+id/txtRepsShow4Free"
+                    app:layout_constraintTop_toTopOf="parent"
+                    app:layout_constraintVertical_bias="0.428" />
+
+                <TextView
+                    android:id="@+id/tvTotalVolumeFree"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+
+                    android:layout_marginBottom="4dp"
+                    android:layout_marginEnd="4dp"
+                    android:layout_marginLeft="42dp"
+                    android:layout_marginRight="4dp"
+                    android:layout_marginStart="42dp"
+                    android:layout_marginTop="4dp"
+                    android:text="Volume"
+                    android:textColor="@color/md_white_1000"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintEnd_toStartOf="@+id/txtMaxRm1Free"
+                    app:layout_constraintHorizontal_bias="1.0"
+                    app:layout_constraintLeft_toLeftOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toTopOf="parent" />
+
+                <TextView
+                    android:id="@+id/txtMaxRm1Free"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginBottom="4dp"
+                    android:layout_marginTop="4dp"
+                    android:text="1RM"
+                    android:textColor="@color/md_white_1000"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintLeft_toRightOf="@+id/tvTotalVolumeFree"
+                    app:layout_constraintRight_toLeftOf="@+id/txtRepsShow3Free"
+                    app:layout_constraintTop_toTopOf="parent" />
+
+                <TextView
+                    android:id="@+id/txtRepsShow3Free"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginBottom="4dp"
                     android:layout_marginLeft="4dp"
                     android:layout_marginStart="4dp"
                     android:layout_marginTop="4dp"
                     android:text="الوزن"
                     android:textColor="@color/md_white_1000"
                     app:layout_constraintBottom_toBottomOf="parent"
-                    app:layout_constraintEnd_toStartOf="@+id/txtRepsShow4"
-                    app:layout_constraintStart_toEndOf="@+id/txtMaxRm1"
+                    app:layout_constraintEnd_toStartOf="@+id/txtRepsShow4Free"
+                    app:layout_constraintStart_toEndOf="@+id/txtMaxRm1Free"
                     app:layout_constraintTop_toTopOf="parent"
                     app:layout_constraintVertical_bias="0.428" />
 
                 <TextView
-                    android:id="@+id/txtRepsShow4"
+                    android:id="@+id/txtRepsShow4Free"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
 
@@ -349,8 +349,8 @@
                     android:text="التكرار"
                     android:textColor="@color/md_white_1000"
                     app:layout_constraintBottom_toBottomOf="parent"
-                    app:layout_constraintEnd_toStartOf="@+id/txtSetsShow"
-                    app:layout_constraintStart_toEndOf="@+id/txtRepsShow3"
+                    app:layout_constraintEnd_toStartOf="@+id/txtSetsShowFree"
+                    app:layout_constraintStart_toEndOf="@+id/txtRepsShow3Free"
                     app:layout_constraintTop_toTopOf="parent"
                     app:layout_constraintVertical_bias="0.428" />
             </android.support.constraint.ConstraintLayout>
