--- a/app/src/main/res/layout/their_message.xml
+++ b/app/src/main/res/layout/their_message.xml
@@ -8,14 +8,13 @@ android:paddingRight="60dp"
 android:clipToPadding="false"
     android:layoutDirection="ltr">
 
-<ImageView
+<de.hdodenhof.circleimageview.CircleImageView
     android:id="@+id/avatar"
     android:layout_marginTop="50dp"
     android:layout_alignParentLeft="true"
-    android:scaleType="centerInside"
-    android:background="@drawable/circle"
     android:layout_width="34dp"
-    android:layout_height="34dp" />
+    android:layout_height="34dp"
+    android:src="@drawable/profile_pic_large"/>
 
 <TextView
     android:id="@+id/text_message_name"
