--- a/app/src/main/res/layout/activity_slider.xml
+++ b/app/src/main/res/layout/activity_slider.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:layoutDirection="ltr"
     tools:context=".Activity.SliderActivity">
 
     <android.support.v4.view.ViewPager
@@ -36,7 +37,7 @@
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
         android:layout_alignParentStart="true"
-        android:text="Back"
+        android:text="السابق"
         android:background="@color/transparent"
         android:textColor="@color/white_with_alpha"
         android:layout_alignParentLeft="true" />
@@ -47,7 +48,7 @@
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
         android:layout_alignParentEnd="true"
-        android:text="Next"
+        android:text="التالي"
         android:background="@color/transparent"
         android:textColor="@color/white_with_alpha"
         android:layout_alignParentRight="true" />
@@ -57,7 +58,7 @@
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
         android:layout_alignParentEnd="true"
-        android:text="finish"
+        android:text="انهاء"
         android:background="@color/transparent"
         android:textColor="@color/white_with_alpha"
         android:visibility="invisible"
