--- a/app/src/main/res/layout/bubbleschat.xml
+++ b/app/src/main/res/layout/bubbleschat.xml
@@ -41,7 +41,7 @@
 
         <EditText
             android:id="@+id/et_chatbox"
-            android:hint="Enter message"
+            android:hint="ادخل رسالة.."
             android:background="@android:color/transparent"
             android:layout_gravity="center"
             android:layout_marginLeft="16dp"
@@ -53,7 +53,7 @@
 
         <Button
             android:id="@+id/button_chatbox_send"
-            android:text="SEND"
+            android:text="ارسال"
             android:textSize="14dp"
             android:clickable="true"
             android:layout_width="64dp"
