--- a/app/src/main/res/layout/cardview_addworkout.xml
+++ b/app/src/main/res/layout/cardview_addworkout.xml
@@ -13,13 +13,13 @@
     <android.support.v7.widget.CardView
         android:layout_width="match_parent"
         android:id="@+id/cardViewMeals"
-        android:layout_height="200dp"
+        android:layout_height="180dp"
         app:cardCornerRadius="5dp"
         app:cardElevation="10dp"
         android:layout_marginHorizontal="10dp"
         android:layout_marginVertical="5dp"
-        app:contentPaddingRight="10dp"
-        app:contentPaddingLeft="10dp"
+        app:contentPaddingRight="15dp"
+        app:contentPaddingLeft="15dp"
         app:cardMaxElevation="15dp">
 
         <ProgressBar
@@ -38,7 +38,8 @@
             <ImageView
                 android:id="@+id/imageViewMu"
                 android:layout_width="match_parent"
-                android:layout_height="170dp"
+                android:layout_height="match_parent"
+                android:layout_above="@+id/dumbl"
                 android:scaleType="centerCrop" />
 
             <RelativeLayout
