--- a/app/src/main/res/layout/slider_view_holder.xml
+++ b/app/src/main/res/layout/slider_view_holder.xml
@@ -7,16 +7,29 @@
 
     <ImageView
         android:id="@+id/iv_slider"
+        android:layout_width="200dp"
+        android:layout_height="300dp"
+        android:layout_alignParentTop="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="36dp"
+        android:src="@drawable/header" />
+
+    <ProgressBar
+        android:id="@+id/progressBar"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:src="@drawable/header"
-        android:layout_centerHorizontal="true"/>
+        android:layout_alignParentTop="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="160dp"
+        style="?android:attr/progressBarStyleHorizontal"
+        android:theme="@style/WhiteAccent" />
     
     <TextView
         android:id="@+id/tv_sliderHeader"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Heading"
+        android:layout_marginTop="7dp"
         android:layout_below="@+id/iv_slider"
         android:layout_centerHorizontal="true"
         android:textSize="20sp"
@@ -28,6 +41,7 @@
         android:layout_height="wrap_content"
         android:layout_below="@+id/tv_sliderHeader"
         android:layout_centerHorizontal="true"
+        android:layout_marginHorizontal="10dp"
         android:gravity="center"
         android:text="klgjdfl kjghdfkjg iljgldj;s kldfgkld ldfjioed.kjghdf kihgfdijg,kjghdfi,oifjdio"
         android:textColor="@color/white_with_alpha" />
