chat xml fixing

--- a/app/src/main/res/layout/bubbleschatadmin.xml
+++ b/app/src/main/res/layout/bubbleschatadmin.xml
@@ -7,7 +7,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:layoutDirection="ltr"
-    android:background="@color/grey"
+    android:background="@drawable/vegowall"
     >
 
     <android.support.design.widget.AppBarLayout
