--- a/app/src/main/res/layout/bubbleschat.xml
+++ b/app/src/main/res/layout/bubbleschat.xml
@@ -13,6 +13,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_marginBottom="50dp"
+        android:background="@drawable/vegowall"
         app:layout_constraintTop_toTopOf="@+id/layout_chatbox"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent">
