--- a/app/src/main/res/layout/my_message.xml
+++ b/app/src/main/res/layout/my_message.xml
@@ -1,5 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:paddingVertical="10dp"
@@ -9,27 +11,33 @@
     android:layoutDirection="ltr">
 
     <TextView
-        android:layout_marginTop="55dp"
+        android:id="@+id/text_message_body"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/text_message_body"
-        android:background="@drawable/my_message"
-        android:textColor="#fff"
-        android:padding="10dp"
-        android:elevation="2dp"
-        android:textSize="18dp"
         android:layout_alignParentRight="true"
+        android:layout_marginBottom="8dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginRight="8dp"
+        android:background="@drawable/my_message"
+        android:elevation="2dp"
+        android:padding="10dp"
         android:text="Placeholder message"
-        />
+        android:textColor="#fff"
+        android:textSize="18dp"
+        app:layout_constraintTop_toBottomOf="@+id/tv_date"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent" />
+
     <TextView
         android:id="@+id/text_message_time"
-        android:text="11:40"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textSize="10sp"
-        android:layout_marginLeft="4dp"
+        android:layout_below="@+id/text_message_body"
         android:layout_toLeftOf="@+id/text_message_body"
-        android:layout_below="@+id/text_message_body"/>
+        android:text="11:40"
+        android:textSize="10sp"
+        app:layout_constraintStart_toStartOf="@+id/text_message_body"
+        app:layout_constraintTop_toBottomOf="@+id/text_message_body" />
 
     <TextView
         android:id="@+id/tv_date"
@@ -37,14 +45,22 @@
         android:layout_height="46dp"
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
+        android:layout_marginEnd="8dp"
+        android:layout_marginLeft="8dp"
+        android:layout_marginRight="8dp"
+        android:layout_marginStart="8dp"
         android:background="@drawable/date_chat"
         android:elevation="2dp"
         android:gravity="center"
         android:padding="10dp"
         android:text="Sep 26, 2018"
         android:textColor="#fff"
-        android:textSize="18dp" />
+        android:textSize="14dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.394"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
 
 
-</RelativeLayout>
+</android.support.constraint.ConstraintLayout>
