--- a/app/src/main/res/layout/their_message.xml
+++ b/app/src/main/res/layout/their_message.xml
@@ -1,6 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-android:layout_width="match_parent"
+<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
 android:layout_height="wrap_content"
 android:paddingVertical="10dp"
 android:paddingLeft="15dp"
@@ -8,23 +10,34 @@ android:paddingRight="60dp"
 android:clipToPadding="false"
     android:layoutDirection="ltr">
 
-<de.hdodenhof.circleimageview.CircleImageView
-    android:id="@+id/avatar"
-    android:layout_marginTop="50dp"
-    android:layout_alignParentLeft="true"
-    android:layout_width="34dp"
-    android:layout_height="34dp"
-    android:src="@drawable/profile_pic_large"/>
+    <de.hdodenhof.circleimageview.CircleImageView
+        android:id="@+id/avatar"
+        android:layout_width="34dp"
+        android:layout_height="34dp"
+        android:layout_alignParentLeft="true"
+        android:layout_marginBottom="8dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginLeft="8dp"
+        android:layout_marginRight="8dp"
+        android:layout_marginStart="8dp"
+        android:src="@drawable/profile_pic_large"
+        app:layout_constraintBottom_toTopOf="@+id/text_message_body"
+        app:layout_constraintEnd_toStartOf="@+id/text_message_name"
+        app:layout_constraintStart_toStartOf="parent" />
 
-<TextView
-    android:id="@+id/text_message_name"
-    android:layout_marginLeft="15dp"
-    android:layout_toRightOf="@+id/avatar"
-    android:layout_alignTop="@+id/avatar"
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
-    android:paddingBottom="4dp"
-    android:text="Rose"/>
+    <TextView
+        android:id="@+id/text_message_name"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignTop="@+id/avatar"
+        android:layout_below="@+id/tv_date"
+        android:layout_marginBottom="8dp"
+        android:layout_marginLeft="8dp"
+        android:layout_toRightOf="@+id/avatar"
+        android:paddingBottom="4dp"
+        android:text="Rose"
+        app:layout_constraintBottom_toTopOf="@+id/text_message_body"
+        app:layout_constraintLeft_toRightOf="@+id/avatar" />
 
     <TextView
         android:id="@+id/tv_date"
@@ -32,36 +45,54 @@ android:clipToPadding="false"
         android:layout_height="46dp"
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
+        android:layout_marginEnd="8dp"
+        android:layout_marginLeft="8dp"
+        android:layout_marginRight="8dp"
+        android:layout_marginStart="8dp"
         android:background="@drawable/date_chat"
         android:elevation="2dp"
         android:gravity="center"
         android:padding="10dp"
         android:text="Sep 26, 2018"
         android:textColor="#fff"
-        android:textSize="18dp" />
+        android:textSize="14dp"
+        app:layout_constraintBottom_toTopOf="@+id/text_message_name"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.635"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="1.0" />
 
-<TextView
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
-    android:id="@+id/text_message_body"
-    android:layout_below="@+id/text_message_name"
-    android:layout_alignLeft="@+id/text_message_name"
-    android:background="@drawable/their_message"
-    android:layout_marginRight="15dp"
-    android:paddingVertical="12dp"
-    android:paddingHorizontal="16dp"
-    android:elevation="2dp"
-    android:textSize="18dp"
-    android:text="How are you doing? This is a long message that should probably wrap."
-    />
+    <TextView
+        android:id="@+id/text_message_body"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignLeft="@+id/text_message_name"
+        android:layout_below="@+id/text_message_name"
+        android:layout_marginBottom="8dp"
+        android:layout_marginLeft="16dp"
+        android:layout_marginStart="16dp"
+        android:background="@drawable/their_message"
+        android:elevation="2dp"
+        android:paddingHorizontal="16dp"
+        android:paddingVertical="12dp"
+        android:text="How are you doing? This is a long message that should probably wrap."
+        android:textSize="18dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/tv_date"
+        app:layout_constraintVertical_bias="1.0" />
 
     <TextView
         android:id="@+id/text_message_time"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@+id/text_message_body"
-        android:layout_marginLeft="-28dp"
+        android:layout_marginEnd="4dp"
+        android:layout_marginRight="4dp"
         android:layout_toRightOf="@+id/text_message_body"
         android:text="11:40"
-        android:textSize="10sp" />
-</RelativeLayout>
+        android:textSize="10sp"
+        app:layout_constraintEnd_toEndOf="@+id/text_message_body"
+        app:layout_constraintTop_toBottomOf="@+id/text_message_body" />
+</android.support.constraint.ConstraintLayout>
