--- a/app/src/main/res/layout/users_view_holder.xml
+++ b/app/src/main/res/layout/users_view_holder.xml
@@ -3,24 +3,29 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    tools:context=".Fragment.FragmentSupportList">
+    tools:context=".Fragment.FragmentSupportList"
+    android:background="@drawable/custom_edit_text_white">
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
-        android:layout_margin="15dp">
+        android:layout_margin="15dp"
+>
 
         <de.hdodenhof.circleimageview.CircleImageView
             android:id="@+id/iv_profilePicSupport"
-            android:layout_width="85dp"
-            android:layout_height="85dp"
-            android:src="@drawable/profile_pic_large"/>
+            android:layout_width="70dp"
+            android:layout_height="70dp"
+            android:src="@drawable/profile_pic_large"
+            android:layout_gravity="center_vertical"/>
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="vertical">
+            android:orientation="vertical"
+            android:layout_marginStart="8dp"
+            android:layout_marginLeft="8dp">
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -32,31 +37,41 @@
                     android:layout_height="match_parent"
                     android:textAlignment="textStart"
                     android:text="klfdgjjgfdil"
+                    android:textStyle="bold"
                     android:gravity="start"
                     android:textSize="18dp"/>
 
+
             </LinearLayout>
-            <RelativeLayout
+            <TextView
+                android:id="@+id/tv_lastMessage"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:maxLines="1"
+                android:text="klfdgjjgfdil"
+                android:textAlignment="viewStart"
+                android:gravity="start"
+                android:textSize="16dp"
+ />
+
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
                 android:orientation="horizontal"
-                >
+                android:layout_weight="3">
 
                 <TextView
-                    android:id="@+id/tv_lastMessage"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_toLeftOf="@+id/tv_display_time"
+                    android:id="@+id/tv_userEmail"
+                    android:layout_width="50dp"
+                    android:layout_height="match_parent"
                     android:textAlignment="textEnd"
-                    android:ellipsize="end"
-                    android:maxLines="1"
                     android:text="klfdgjjgfdil"
-                    android:layout_alignParentLeft="true"
                     android:gravity="start"
-                    android:textSize="16dp"
-                    android:layout_alignParentStart="true"
-                    android:layout_toStartOf="@+id/tv_display_time"
-                     />
+                    android:textSize="14dp"
+                    android:textStyle="bold"
+                    android:layout_weight="2.5"
+                    tools:ignore="RtlCompat" />
 
 
                 <TextView
@@ -70,17 +85,9 @@
                     android:textSize="14dp"
                     android:textColor="@color/blackGrey"
                     android:layout_alignParentRight="true"
-                    android:layout_marginHorizontal="20dp" />
-            </RelativeLayout>
-            <TextView
-                android:id="@+id/tv_userEmail"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:textAlignment="textStart"
-                android:text="klfdgjjgfdil"
-                android:gravity="start"
-                android:textSize="18dp"
-                 />
+                    android:layout_marginHorizontal="20dp"
+                    android:layout_weight="1"/>
+            </LinearLayout>
 
 
 
