--- a/app/src/main/res/layout/fragment_diet_fragment_admin.xml
+++ b/app/src/main/res/layout/fragment_diet_fragment_admin.xml
@@ -17,7 +17,8 @@
         app:tabGravity="center"
         app:tabIndicatorColor="@color/md_white_1000"
         app:tabTextColor="@color/scifitBlue"
-        app:tabMode="scrollable" />
+        app:tabMode="scrollable"
+        android:layoutDirection="rtl"/>
 
     <android.support.design.widget.TabLayout
         android:id="@+id/tablayoutWeek"
@@ -28,7 +29,8 @@
         app:tabGravity="fill"
         app:tabMode="fixed"
         app:tabIndicatorColor="@color/blackGrey"
-        app:tabTextColor="@color/scifitBlue" />
+        app:tabTextColor="@color/scifitBlue"
+        android:layoutDirection="rtl"/>
 
     <Button
         android:id="@+id/btn_addMonth"
