--- a/app/src/main/res/layout/fragment_home2.xml
+++ b/app/src/main/res/layout/fragment_home2.xml
@@ -20,6 +20,7 @@
         app:tabSelectedTextColor="@color/md_white_1000"
         app:tabIndicatorColor="@color/md_white_1000"
         app:tabTextColor="@color/md_white_1000"
+        android:layoutDirection="rtl"
          />
 
     <android.support.design.widget.TabLayout
@@ -31,7 +32,8 @@
         app:tabGravity="fill"
         app:tabMode="fixed"
         app:tabIndicatorColor="@color/blackGrey"
-        app:tabTextColor="@color/scifitBlue" />
+        app:tabTextColor="@color/scifitBlue"
+        android:layoutDirection="rtl"/>
     <!--<include-->
         <!--layout="@layout/toolbar"-->
         <!--android:id="@+id/app_bar"-->
